--- a/.github/workflows/build-multi.yml
+++ b/.github/workflows/build-multi.yml
@@ -59,9 +59,6 @@ jobs:
 
   android:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_HOME: ${{ runner.temp }}/android-sdk
-      PATH: ${{ runner.temp }}/android-sdk/emulator:${{ runner.temp }}/android-sdk/tools:${{ runner.temp }}/android-sdk/tools/bin:${{ runner.temp }}/android-sdk/platform-tools:$PATH
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -71,7 +68,7 @@ jobs:
         with:
           toolchain: stable
 
-      # Cài Android SDK
+      # Setup Android SDK & Emulator
       - name: Setup Android SDK
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -108,7 +105,7 @@ jobs:
           echo "$CERTIFICATE_BASE64" | base64 --decode > ios_cert.p12
           echo "$PROVISION_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
 
-      # Build iOS với tauri-mobile
+      # Build iOS
       - run: npm run tauri ios -- --signing-cert ios_cert.p12 --provisioning-profile profile.mobileprovision
 
       - uses: actions/upload-artifact@v3
