--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -44,19 +44,19 @@ jobs:
             curl \
             build-essential
 
-      # 5️⃣ Install npm dependencies and build frontend
+      # 5️⃣ Install npm dependencies and build SvelteKit frontend
       - name: Install npm dependencies
         run: |
           npm install
-          npm run build
+          npm run build  # build production frontend
 
       # 6️⃣ Install Tauri CLI from GitHub (fix skip_stapling bug)
       - name: Install Tauri CLI
         run: cargo install --git https://github.com/tauri-apps/tauri tauri-cli
 
-      # 7️⃣ Build Tauri App
+      # 7️⃣ Build Tauri App (release mode inferred from tauri.conf.json)
       - name: Build Tauri App
-        run: cargo tauri build -- --release
+        run: cargo tauri build
 
       # 8️⃣ Upload build artifacts
       - name: Upload artifact
