Update Linux build workflow for Rust and dependencies

--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RUST_LOG: info
+      PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig
 
     steps:
       # 1️⃣ Checkout repository
@@ -41,6 +42,7 @@ jobs:
             libgdk-pixbuf2.0-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
+            libjavascriptcoregtk-4.1-dev \
             curl \
             build-essential
 
